# TodoList

./: .gitignore  README.md  pyproject.toml  requirements.txt
todo/: models.py  serializers.py  urls.py  views.py
todolist/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
